# django-url-resolver

./: setup.cfg
url_resolver/: main.py  settings.py
url_resolver/utils/: __init__.py
