[metadata]
name = django_url_resolver
version = 0.1.0
author = manderj
author_email = joffrey.mander@gmail.com
license = Proprietary
description = Find informations on a django URL (source file, view name, etc)
keyword = tools development
url = https://github.com/manderj/django-url-resolver
long_description = file: README.rst
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
extra_requires =
  dev =
    black
    ipdb
    isort
    pylint
    pytest

[options.entry_points]
console_scripts =
    django_url_resolver = url_resolver.main:main
